# kompyla

./: .dockerignore  .env.example  Dockerfile  README.md  config.yaml.example  docker-compose.yml  kompyla_lifecycle.mermaid  pyproject.toml  requirements.txt
kompyla/: __init__.py  cli.py  config.py
kompyla/compiler/: __init__.py  compile.py  ingest.py  linker.py
kompyla/crossref/: bridge.py
kompyla/evolver/: __init__.py  confidence.py  gaps.py  lint.py
kompyla/feedback/: apply.py  store.py
kompyla/filter/: __init__.py  dedup.py  relevance.py
kompyla/llm/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
kompyla/presenter/: __init__.py  charts.py  docx_export.py  html_export.py  markdown_bundle.py  pdf_export.py  pptx_export.py  slides.py
kompyla/query/: qa.py
kompyla/retriever/: __init__.py  arxiv_source.py  base.py  extractor.py  github.py  orchestrator.py  rss.py  web.py  youtube.py
kompyla/scheduler/: runner.py  schedule.py
kompyla/schema/: __init__.py  generator.py  models.py
kompyla/storage/: __init__.py  index.py  layout.py
kompyla/synth/: generator.py
kompyla/ui/: app.py
kompyla/utils/: json_utils.py
tests/: test_dedup.py  test_evolver.py  test_json_repair.py  test_phase5.py  test_presenter.py  test_qa_select.py  test_youtube.py
