[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kompyla"
version = "0.1.0"
description = "Autonomous research agent with an evolving knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
    "pyyaml>=6",
    "anthropic>=0.28",
    "ollama>=0.2",
    "python-frontmatter>=1.1",
    "youtube-transcript-api>=0.6",
    "trafilatura>=1.12",
    "feedparser>=6.0",
    "arxiv>=2.1",
    "datasketch>=1.6",
    "httpx>=0.27",
    "markdown>=3.6",
    "matplotlib>=3.8",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "streamlit>=1.30",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[project.scripts]
kompyla = "kompyla.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kompyla*"]
